--- a/AboutMe.css
+++ b/AboutMe.css
@@ -9,10 +9,10 @@ body {
 
 h1 {
     font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Cormorant Garamond', serif;
     text-align: center;
     text-transform: uppercase;
-    color: #000000;
+    color: #FFD700;
 }
 
 h3 {
@@ -81,13 +81,6 @@ aside {
     text-align: justify;
 }
 
-#intro-image {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 10px;
-}
-
 section {
     flex: 1 1 420px;
     padding: 20px;
@@ -108,6 +101,11 @@ footer {
     margin-top: 20px;
 }
 
+footer p {
+    margin: 0;
+}
+
+/* Footer Image */
 #footer-image {
     height: 50px;
     width: 50px;
